# playground

./: Cargo.toml  readme.md  tasks.txt
src/: events.rs  gates.rs  main.rs  simulator.rs  types.rs  ui.rs  utils.rs
src/types/: circuit.rs  gate.rs  gate_type.rs  keys.rs  mod.rs  pin_type.rs  pins.rs  spatial_pin_index.rs  wires.rs
tmp/saves/: clock.save  copy_paste.save  flag.save  nand.save  notnand_or.save  save3.json
